完成监控界面+组件安装管理的设计

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="app-loading"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script src="./node_modules/hls.js/dist/hls.min.js"></script>
     <!-- <script src="./src/views/menu/menu1/menu1-1/v4.6.5-dist/ol.js"></script> -->
     <!-- <script src="http://leap2frog.cn:8060/ol.js"></script> -->
   </body>
